# School

./: README.md  markdown_theme.css  type_shit.md
AI/: Week 5.ipynb  Week4.ipynb  roadmap.typ  week_3_perceptron.ipynb
AI/final_assessment_proposal/: traffic-sign-defense-proposal.typ
AI/notes/: linear_alg.typ
AI/w0/: w0.ipynb  worksheet_0.typ
AI/w1/: Week_1_Workshop.ipynb  t1.typ
AI/w2/: questions.md  softmax.ipynb
AI/w5/: t5.typ
Complex/: Week_0.md
Complex/lit_review/: fanacy_layout.typ  finalized_lit_review.typ  refs.bib  synthesis.typ
Distributed_Systems/w1/: README.md  a.out  main.c  mpi02.c  random.c  workshop.md
Distributed_Systems/w2/: README.md
Distributed_Systems/w3/: notes.md
Distributed_Systems/w5/: workshop.md
Distributed_Systems/w6/: tuto.md
Distributed_Systems/w8/: index.php  (+1 more)
FYP/: proposal.md
Human_Computer_Interaction/: TODOS.md  week2.md
Hustling-01/: Competitor.java  CompetitorList.java  Main.java  Manager.java  Questions.java  Quiz.java  TestAll.java  database.java  something.md
System_Architecture/: Archetecture.excalidraw  database_stuff.md  soln.md
ai/: Matrix_Derivatives.md  Turnitn report  math.md  notes.md
big_data/: w4.ipynb
distributed_p2p_chatapp/: README.md  package.json  vite.config.ts
evaluator/: Caddyfile  Cargo.toml  README.md
evaluator/src/: main.rs
evaluator/src/middleware/: mod.rs
evaluator/src/models/: mod.rs
evaluator/src/routes/: auth.rs  eval.rs  mod.rs
evaluator/tests/: eval.hurl  login.hurl  protected.hurl  random_fen.py  sign_up.hurl
nmc/: notes.md
oop/: notes.md  tests
(+596 files in other folders)
