[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
libsql = "0.9.20"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9.3"
chrono = "0.4"
